<resources>
    <string name="app_name">WAP</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_add">Add</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="water_drop">Water Drop</string>
    <string name="placeholder" />
    <string name="splash_screen_background">Splash Screen Background</string>
    <string name="wap_logo">WAP Logo</string>

    <!--    Map critical string.-->
    <string name="mapbox_access_token">pk.eyJ1IjoibnN0YWxnaWMiLCJhIjoiY2trZndsZWV1MDlnYTJ2azJmOHlkdzZldiJ9.3Y1Gl-AFgXzgRSCYLhRMdA</string>
    <string name="user_location_permission_not_granted">NO GRANT</string>
    <string name="user_location_permission_explanation"> CHIME</string>
    <string name="location_picker_select_location_button_cancel">Cancel</string>
    <string name="location_picker_select_location_button_select">Select a location</string>
    <string name="location_picker_dropped_marker_snippet_no_results">No results</string>
    <string name="location_picker_place_name_result">Place name: %1$s</string>
    <string name="the_water_assessment_project">The Water Assessment Project</string>
    <string name="skip">skip</string>
    <string name="about">About</string>
    <string name="ah_heading">Aqua Hacking Challenge</string>
    <string name="rrc_heading">Mobile App Development</string>
    <string name="wap_heading">The Project</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="map_header">Map Preferences</string>
    <string name="update_header">Update</string>
    <string name="res_header">High Image Resolution</string>
    <string name="layers">Agriculture Image Style</string>
    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="push_notif">Enable push notifications</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="searched_images">Images</string>
</resources>