<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#414243">

    <!--    These Two Categories are here only for padding.-->
    <PreferenceCategory
        android:title=""
        app:allowDividerAbove="false"
        app:allowDividerBelow="false" />
    <PreferenceCategory
        android:title=""
        app:allowDividerAbove="false"
        app:allowDividerBelow="false" />


    <PreferenceCategory app:title="@string/map_header">

        <EditTextPreference
            android:defaultValue="true"
            android:key="display_limit"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Images returned" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/update_header">

        <SwitchPreferenceCompat
            app:key="push_notification"
            app:title="@string/push_notif" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>


</PreferenceScreen>